Fixed spacing between input and dropdown

--- a/less/stb-typeahead.less
+++ b/less/stb-typeahead.less
@@ -93,6 +93,11 @@
     font-family: "open sans bold";
   }
 
+  input.tt-input{
+    margin-bottom: 0;
+  }
+
+
   h3.headline-search{
     text-align: center;
     margin: 10px 0px 5px 0px;
